@@ -1,0 +1,3 @@
+<h3>Literaturhinweis</h3><ul>
+  <li><strong>Ältestenrat:</strong>18-99</li>
+</ul>
